# files

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  we.prodtest.config.json
.github/workflows/: build-webhapps.yml  release.yml  test.yml
dna/workdir/: dna.yaml  happ.yaml
dna/workdir_dev/: dna.yaml  happ.yaml
dna/workdir_profiles/: dna.yaml
dna/workdir_standalone/: happ.yaml
dna/zomes/delivery/: Cargo.toml
dna/zomes/delivery/src/: lib.rs
dna/zomes/delivery_integrity/: Cargo.toml
dna/zomes/delivery_integrity/src/: lib.rs
dna/zomes/file_share/: Cargo.toml
dna/zomes/file_share/src/: callbacks.rs  commit_file.rs  commit_private_file.rs  get_file.rs  get_files.rs  get_local_files.rs  get_private_files_from.rs  get_unreplied_notices.rs  lib.rs  probe_files.rs  probe_public_files.rs  process_inbox.rs  publish_file_manifest.rs  respond_to_file_share_notice.rs  send_file.rs  utils.rs  write_file_chunk.rs
dna/zomes/file_share_integrity/: Cargo.toml
dna/zomes/file_share_integrity/src/: lib.rs
dna/zomes/files/: Cargo.toml
dna/zomes/files/src/: attach_to_hrl.rs  callbacks.rs  commit_private_file.rs  encrypt.rs  get_any_record.rs  get_file_info.rs  get_files.rs  get_unreplied_notices.rs  lib.rs  process_inbox.rs  publish_file_manifest.rs  respond_to_file_notice.rs  send_file.rs  utils.rs  write_file_chunk.rs
dna/zomes/files_integrity/: Cargo.toml
dna/zomes/files_integrity/src/: lib.rs  priv_enc_key.rs
dna/zomes/notifications/: Cargo.toml
dna/zomes/notifications/src/: lib.rs
dna/zomes/notifications_integrity/: Cargo.toml
dna/zomes/notifications_integrity/src/: lib.rs
dna/zomes/path_explorer/: Cargo.toml
dna/zomes/profiles/: Cargo.toml
dna/zomes/profiles_integrity/: Cargo.toml
dna/zomes/tagging/: Cargo.toml
dna/zomes/tagging/src/: lib.rs  private.rs  public.rs
dna/zomes/tagging_integrity/: Cargo.toml
dna/zomes/tagging_integrity/src/: lib.rs  properties.rs
scripts/: clean.sh  ts-bindings.sh
we-applet/: .gitignore  index.html  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
we-applet/demo/: index.html
we-applet/src/: applet-services.ts  applet-view.ts  attachment-types.ts  createFileShareApplet.ts  createFilesApplet.ts  cross-applet-view.ts  devtest.ts  index.ts  mock.ts  setup.ts  setupDemo.ts  setupDevtest.ts  we-applet.ts
we-applet/src/appletServices/: appletServices.ts  attachmentTypes.ts  blockTypes.ts  getAssetInfo.ts  getAttachableInfo.ts  getEntryInfo.ts  search.ts
we-applet/src/files-applet/: appletServices.ts  attachmentTypes.ts  createFileShareApplet.ts  getEntryInfo.ts
we-applet/webhapp.workdir/: web-happ.yaml
webapp/: .gitignore  index.html  package.json  rollup.config.js  web-dev-server.config.mjs
webapp/src/: file-share-app.ts  files-app.ts  files-blocks.ts  globals.ts  happDef.ts  index.ts  localization.ts  myworker.js
webapp/src/elements/: file-share-page.ts  files-main-view.ts
webapp/webhapp.workdir/: web-happ.yaml
webapp/xliff/: fr-fr.xlf
webcomponents/: package.json  tsconfig.json
webcomponents/src/: fileTypeUtils.ts  index.ts  safeDefine.ts  sharedStyles.ts  toast.ts  utils.ts
webcomponents/src/bindings/: deps.types.ts  file_share.fn.ts  file_share.proxy.ts  file_share.types.ts  files.fn.ts  files.proxy.ts  files.types.ts  tagging.fn.ts  tagging.proxy.ts  tagging.types.ts
webcomponents/src/elements/: action-overlay.ts  activity-timeline.ts  distribution-table.ts  edit-profile.ts  file-button.ts  file-preview.ts  file-share-debug.ts  file-share-menu.ts  file-share-page-old.ts  file-share-page.ts  file-table.ts  file-view.ts  filename.ts  files-menu.ts  fs-menu.ts  inbound-stack.ts  inbox.ts  profile-input.ts  profile-item.ts  publish-dialog.ts  send-dialog.ts  store-dialog.ts  tag-input.ts  tag-list.ts
webcomponents/src/viewModel/: fileShare.zvm.ts
webcomponents/src/viewModels/: commitPrivateFile.ts  fileShare.dvm.ts  fileShare.perspective.ts  fileShare.zvm.ts  files.dvm.ts  files.perspective.ts  files.zvm.ts  happDef.ts  profiles.zvm.ts  tagging.zvm.ts
webcomponents/xliff/: fr-fr.xlf
