[workspace]
members = [
  #"dna/zomes/path_explorer",
  "dna/zomes/notifications_integrity",
  "dna/zomes/notifications",
  "dna/zomes/profiles_integrity",
  "dna/zomes/profiles",
  "dna/zomes/delivery_integrity",
  "dna/zomes/delivery",
  "dna/zomes/files_integrity",
  "dna/zomes/files",
  "dna/zomes/tagging_integrity",
  "dna/zomes/tagging",
  #"sweettest" // Don't add this since cargo sucks at target specific compiliation in workspaces
  ]

[workspace.package]
version = "0.1.0"
rust-version = "1.70.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.197", default-features = false }
hdi = { version = "=0.4.0-beta-dev.30", default-features = false }
hdk = { version = "=0.3.0-beta-dev.34", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-3.0" }
path_explorer_types = {git = "https://github.com/lightningrodlabs/path-explorer", package = "path_explorer_types", branch = "hdk-3.0"}

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
#lto = true
lto = false


[workspace.dependencies.notifications]
path = "dna/zomes/notifications"

[workspace.dependencies.notifications_integrity]
path = "dna/zomes/notifications_integrity"

