[package]
name = "notifications"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

notifications_integrity = { workspace = true }

#hc_zome_notifications = { git = "https://github.com/holochain-open-dev/notifications", branch = "0.2-merge" }
hc_zome_notifications = { git = "https://github.com/ddd-mtl/notifications", branch = "hdk-3.0" }

