[package]
name = "notifications_integrity"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
hdi = { workspace = true }

serde = { workspace = true }

#hc_zome_notifications_integrity = { git = "https://github.com/holochain-open-dev/notifications", branch = "0.2-merge" }
hc_zome_notifications_integrity = { git = "https://github.com/ddd-mtl/notifications", branch = "hdk-3.0" }


